solc_mutator_ossfuzz_seed_corpus/test_sol/test_af0a603ed22f496856d57177cad031a7caf068d65c44a3d9ada58e7b21166e04_4985d9da3a1f0f04378d6f47449e7663c4ac8181_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  function f0(uint40 i0,int144 i1,int256 i2) external returns(address o0,bool o1)
  {
{
  i2 *= -(((8594151405523230659997466348706527330754164200328341149121960795121658464230 * -14032897620543839909576889133528430140161235662816733707499070809410689102494) ^ -(14393497476925940303997126875051151388750426553351828920196473679492885463530)));

}



{






}


  }
  function f1(function () external i0,bytes memory i1) external returns(uint104 o0)
  {
  }
}
// ----
// TypeError 7366: (su0.sol:112-365): Operator *= not compatible with types int256 and int_const -120...(146 digits omitted)...6650
